crates/safessh-tui/tests/snapshots/rules_snapshot__empty_timed_tab.snap
---
source: crates/safessh-tui/tests/rules_snapshot.rs
expression: render(&s)
---
project: < prod >  (1/1)                                                                            
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Timed │ Always │ Blocked │ File                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
No timed rules for prod.
