crates/safessh-tui/tests/snapshots/rules_snapshot__populated_always_tab.snap
---
source: crates/safessh-tui/tests/rules_snapshot.rs
expression: render(&s)
---
project: < prod >  (1/1)                                                                            
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Timed │ Always │ Blocked │ File                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Always rules──────────────────────────────────────────────────────────────────────────────────────┐
│  RULE                 BIN        FLAGS      CATEGORIES                                           │
│> rule-allow-1         rm         -rf        destructive:filesystem                               │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
