crates/safessh-tui/tests/snapshots/rules_snapshot__populated_blocked_tab.snap
---
source: crates/safessh-tui/tests/rules_snapshot.rs
assertion_line: 101
expression: render(&s)
---
project: < prod >  (1/1)                                                                            
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Timed │ Always │ Blocked                                                                         │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Blocked rules─────────────────────────────────────────────────────────────────────────────────────┐
│  RULE                 BIN        FLAGS      CATEGORIES                                           │
│> rule-block-1         rm         -rf        destructive:filesystem                               │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
