crates/safessh-tui/tests/snapshots/rules_snapshot__rules_file_tab_empty.snap
---
source: crates/safessh-tui/tests/rules_snapshot.rs
expression: render(&s)
---
project: < prod >  (1/1)                                                                            
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Timed │ Always │ Blocked │ File                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
No file rules for prod.
