crates/safessh-tui/tests/snapshots/rules_snapshot__rules_file_tab_populated.snap
---
source: crates/safessh-tui/tests/rules_snapshot.rs
expression: render(&s)
---
project: < prod >  (1/1)                                                                            
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Timed │ Always │ Blocked │ File                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌File rules────────────────────────────────────────────────────────────────────────────────────────┐
│  IDX  CATEGORY             PATHS                                                       DECISION  │
│> 0    read                 /etc/passwd /etc/shadow                                     Allow     │
│  1    write                /var/log/app.log                                            Deny      │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
